# ResQPi

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
backend/: README.md  backend.py  init_db.py  requirements.txt
cpp/: CMakeLists.txt  README.md  vcpkg.json
cpp/models/: yolov10n_gestures_int8.onnx
cpp/src/: receiver.cpp  sender.cpp
cpp/src/inferrer/: Inferrer.cpp  Inferrer.hpp
frontend/restqpifrontend/: README.md  package-lock.json  package.json
frontend/restqpifrontend/src/app/: globals.css  layout.js  page.js  page.module.css
frontend/restqpifrontend/src/components/Dashboard/: Dashboard.jsx  Dashboard.module.css
frontend/restqpifrontend/src/components/LocationCard/: LocationCard.jsx  LocationCard.module.css
frontend/restqpifrontend/src/components/StatusBadge/: StatusBadge.jsx  StatusBadge.module.css
src/: main.cpp  receiver.cpp  sender.cpp
src/detect/: detect.cpp
src/inferrer/: Inferrer.hpp
